[package]
name = "tectflow_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = { version = "0.8.2" }
imgui-winit-support = { version = "0.8.2", features = ["winit-26"] }
winit = { version = "0.26.0" }
