[package]
name = "tectflow_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.0", features = ["linked"] }
ash-window = { version = "0.10.0" }
imgui = { version = "0.8.2" }
imgui-rs-vulkan-renderer = { version = "1.3.0" }
imgui-winit-support = { version = "0.8.2", features = ["winit-26"] }
log = { version = "0.4.17" }
winit = { version = "0.26.0" }
